saves/test/demo_full_20240802_193545/lemmings2/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp lemmings2_tb.v lemmings2.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
lemmings2_tb.v:142: $finish called at 580000 (1ps)

iverilog cmd 2 error:

